--- a/analysis/step4b_download_recognition_data/read_data_from_mongodb.ipynb
+++ b/analysis/step4b_download_recognition_data/read_data_from_mongodb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -107,40 +107,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[u'60b3e20053fcb3b9523269f',\n",
-       " u'5e765cac6382401cbba8a60',\n",
-       " u'60c7a886807684c1543295d',\n",
-       " u'5e8cf2990fa7b60ba8b4a65',\n",
-       " u'60c5a4a48e9b86990001548',\n",
-       " u'60c7b596fac554f65c66acb',\n",
-       " u'60c725d89f51b8cbff252bb',\n",
-       " u'60c3be9465aa1b3e68153df',\n",
-       " u'60c76eb28fe75982f7c9145',\n",
-       " u'60c5af39a32d3711a04c7b8']"
+       "[u'60c00c32f086c3213de3773',\n",
+       " u'60c4e2f0a4dbce1286d7d09',\n",
+       " u'5ea90de5a5bad5377430424',\n",
+       " u'60c2ac0c6fcf4e382a42f74',\n",
+       " u'5f2ac32d1f635437876affa',\n",
+       " u'60c72834098664715c749ca',\n",
+       " u'5e3a190cc688f023afd6e80',\n",
+       " u'60c39f9022cd2c6bf7318f5',\n",
+       " u'5eddce842514f6ae9a1e500',\n",
+       " u'60c344a48b6bc6a6374ddad']"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# prolific_workers = coll.find({'sub_id': {'$type' : \"string\"}, 'version': 'batch1_production_june2021' }).distinct('sub_id')\n",
-    "prolific_workers = coll.find({'sub_id': {'$type' : \"string\"}, 'version': 'batch2_production_june2021' }).distinct('sub_id')\n",
-    "\n",
+    "prolific_workers = coll.find({'sub_id': {'$type' : \"string\"}, 'version': 'batch3_production_june2021' }).distinct('sub_id')\n",
     "np.size(prolific_workers)\n",
     "prolific_workers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -163,33 +162,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "60b3e20053fcb3b9523269f\n",
-      "48\n",
-      "5e765cac6382401cbba8a60\n",
-      "73\n",
-      "60c7a886807684c1543295d\n",
-      "129\n",
-      "5e8cf2990fa7b60ba8b4a65\n",
-      "45\n",
-      "60c5a4a48e9b86990001548\n",
-      "36\n",
-      "60c7b596fac554f65c66acb\n",
-      "105\n",
-      "60c725d89f51b8cbff252bb\n",
-      "26\n",
-      "60c3be9465aa1b3e68153df\n",
-      "5\n",
-      "60c76eb28fe75982f7c9145\n",
-      "59\n",
-      "60c5af39a32d3711a04c7b8\n",
-      "28\n"
+      "60c00c32f086c3213de3773\n",
+      "144\n",
+      "60c4e2f0a4dbce1286d7d09\n",
+      "99\n",
+      "5ea90de5a5bad5377430424\n",
+      "144\n",
+      "60c2ac0c6fcf4e382a42f74\n",
+      "132\n",
+      "5f2ac32d1f635437876affa\n",
+      "100\n",
+      "60c72834098664715c749ca\n",
+      "93\n",
+      "5e3a190cc688f023afd6e80\n",
+      "31\n",
+      "60c39f9022cd2c6bf7318f5\n",
+      "61\n",
+      "5eddce842514f6ae9a1e500\n",
+      "115\n",
+      "60c344a48b6bc6a6374ddad\n",
+      "22\n"
      ]
     }
    ],
@@ -235,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "metadata": {
     "collapsed": true
    },
@@ -246,7 +245,7 @@
     "X_out = pd.DataFrame([subID, imageName, guessed_category, drawn_category])\n",
     "X_out = X_out.transpose()\n",
     "X_out.columns = ['subID','imageName', 'guessed_category','drawn_category']\n",
-    "X_out.to_csv(os.path.join(output_dir,'Devphotodraw_recognition_pilot.csv'))\n"
+    "X_out.to_csv(os.path.join(output_dir,'Devphotodraw_recognition_batch2.csv'))\n"
    ]
   },
   {
@@ -278,12 +277,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'CDM'"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path = 'P_bird_sketch_age5_IPAD5_THU5F3.png'\n",
+    "path = 'P_airplane_sketch_age4_CDM_photodraw_e21547242197593.png'\n",
+    "condition = path.split('/')[-1].split('_')[4]\n",
+    "if path.find('CDM')!=-1:\n",
+    "    site = 'CDM'\n",
+    "else:\n",
+    "    site = 'THU'\n",
+    "site"
+   ]
   },
   {
    "cell_type": "code",
