--- a/analysis/step4b_download_recognition_data/read_data_from_mongodb.ipynb
+++ b/analysis/step4b_download_recognition_data/read_data_from_mongodb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -107,88 +107,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[u'60c00c32f086c3213de3773',\n",
-       " u'60c4e2f0a4dbce1286d7d09',\n",
-       " u'5ea90de5a5bad5377430424',\n",
-       " u'60c2ac0c6fcf4e382a42f74',\n",
-       " u'5f2ac32d1f635437876affa',\n",
-       " u'60c72834098664715c749ca',\n",
-       " u'5e3a190cc688f023afd6e80',\n",
-       " u'60c39f9022cd2c6bf7318f5',\n",
-       " u'5eddce842514f6ae9a1e500',\n",
-       " u'60c344a48b6bc6a6374ddad']"
+       "<pymongo.cursor.Cursor at 0x107c27ad0>"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "catch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[u'Describing illustrations from a list of choices',\n",
+       " u'Guess what people intended to draw from a list of choices.',\n",
+       " u'Recognizing drawings',\n",
+       " u'Identifying drawings from an available set of answers',\n",
+       " u'Looking at drawings and guessing what they were from a set group of choices. ',\n",
+       " u'I was looking at drawings and guessing what they were from a list of words.',\n",
+       " u'naming the images that shows with the given options',\n",
+       " u'Identifying objects.',\n",
+       " u'Identifying drawings; matching what we believe was being drawn from a list of options',\n",
+       " u'Naming drawings']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "catch_responses = []\n",
+    "catch = coll.find({'sub_id': {'$type' : \"string\"}, 'version': this_version, 'dataType': 'catch_trial' })\n",
+    "for c in catch:\n",
+    "   catch_responses.append(c['catch'])\n",
+    "\n",
+    "catch_responses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[u'}}&STUDY_ID={{%STUDY_ID',\n",
+       " u'60ca70f0bb3fef9c094682e',\n",
+       " u'5e342cecde69fe3e0dd20d4',\n",
+       " u'60c918a1b8ecff26d3de9df',\n",
+       " u'60c70a25e730952df844d1e',\n",
+       " u'60ca71e1a0157b6cce37959',\n",
+       " u'602be5d586b0773c600c4ff',\n",
+       " u'60ca42c682bc800df005667',\n",
+       " u'60c6d966de0036fe3659e68',\n",
+       " u'60ca6e4fd5183359ae3255a',\n",
+       " u'60c940f718d8d7c39ed570d']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "this_version = 'batch5_production_june2021'\n",
     "# prolific_workers = coll.find({'sub_id': {'$type' : \"string\"}, 'version': 'batch1_production_june2021' }).distinct('sub_id')\n",
-    "prolific_workers = coll.find({'sub_id': {'$type' : \"string\"}, 'version': 'batch3_production_june2021' }).distinct('sub_id')\n",
+    "prolific_workers = coll.find({'sub_id': {'$type' : \"string\"}, 'version': this_version }).distinct('sub_id')\n",
     "np.size(prolific_workers)\n",
     "prolific_workers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "prolific_workers.pop()\n",
+    "\n",
     "###### Open up variables for CSV writing\n",
     "# basic descriptors\n",
     "subID = []; \n",
     "imageName = []\n",
     "guessed_category = []\n",
-    "drawn_category = [] "
+    "drawn_category = []\n",
+    "version = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "del prolific_workers[0]\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[u'60ca70f0bb3fef9c094682e',\n",
+       " u'5e342cecde69fe3e0dd20d4',\n",
+       " u'60c918a1b8ecff26d3de9df',\n",
+       " u'60c70a25e730952df844d1e',\n",
+       " u'60ca71e1a0157b6cce37959',\n",
+       " u'602be5d586b0773c600c4ff',\n",
+       " u'60ca42c682bc800df005667',\n",
+       " u'60c6d966de0036fe3659e68',\n",
+       " u'60ca6e4fd5183359ae3255a']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prolific_workers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "60c00c32f086c3213de3773\n",
+      "60ca70f0bb3fef9c094682e\n",
       "144\n",
-      "60c4e2f0a4dbce1286d7d09\n",
-      "99\n",
-      "5ea90de5a5bad5377430424\n",
+      "5e342cecde69fe3e0dd20d4\n",
       "144\n",
-      "60c2ac0c6fcf4e382a42f74\n",
-      "132\n",
-      "5f2ac32d1f635437876affa\n",
-      "100\n",
-      "60c72834098664715c749ca\n",
-      "93\n",
-      "5e3a190cc688f023afd6e80\n",
-      "31\n",
-      "60c39f9022cd2c6bf7318f5\n",
-      "61\n",
-      "5eddce842514f6ae9a1e500\n",
-      "115\n",
-      "60c344a48b6bc6a6374ddad\n",
-      "22\n"
+      "60c918a1b8ecff26d3de9df\n",
+      "142\n",
+      "60c70a25e730952df844d1e\n",
+      "138\n",
+      "60ca71e1a0157b6cce37959\n",
+      "144\n",
+      "602be5d586b0773c600c4ff\n",
+      "144\n",
+      "60ca42c682bc800df005667\n",
+      "144\n",
+      "60c6d966de0036fe3659e68\n",
+      "144\n",
+      "60ca6e4fd5183359ae3255a\n",
+      "144\n"
      ]
     }
    ],
@@ -202,39 +289,20 @@
     "        subID.append(e['sub_id'])\n",
     "        imageName.append(e['imageName'])\n",
     "        guessed_category.append(e['guessed_category'])\n",
-    "        drawn_category.append(e['imageCategory'])"
+    "        drawn_category.append(e['imageCategory'])\n",
+    "        version.append(e['version'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{u'_id': ObjectId('60c7b9cfc0059952db3ba038'),\n",
-       " u'dataType': u'recognition_rating',\n",
-       " u'date': u'2021-06-14T20:19:27.393Z',\n",
-       " u'guessed_category': u'rabbit',\n",
-       " u'imageCategory': u'rabbit',\n",
-       " u'imageName': u'https://stanford-cogsci.org:8880/object_drawings/P_rabbit_sketch_age8_CDM_photodraw_e21550689187843.png',\n",
-       " u'sub_id': u'60c6d6b60fc74b211f17ddf',\n",
-       " u'version': u'batch1_production_june2021'}"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "e"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -242,10 +310,10 @@
    "source": [
     "\n",
     "## write out csv \n",
-    "X_out = pd.DataFrame([subID, imageName, guessed_category, drawn_category])\n",
+    "X_out = pd.DataFrame([subID, imageName, guessed_category, drawn_category, version])\n",
     "X_out = X_out.transpose()\n",
-    "X_out.columns = ['subID','imageName', 'guessed_category','drawn_category']\n",
-    "X_out.to_csv(os.path.join(output_dir,'Devphotodraw_recognition_batch2.csv'))\n"
+    "X_out.columns = ['subID','imageName', 'guessed_category','drawn_category','version']\n",
+    "X_out.to_csv(os.path.join(output_dir, this_version + '.csv'))\n"
    ]
   },
   {
@@ -292,14 +360,14 @@
     }
    ],
    "source": [
-    "path = 'P_bird_sketch_age5_IPAD5_THU5F3.png'\n",
-    "path = 'P_airplane_sketch_age4_CDM_photodraw_e21547242197593.png'\n",
-    "condition = path.split('/')[-1].split('_')[4]\n",
-    "if path.find('CDM')!=-1:\n",
-    "    site = 'CDM'\n",
-    "else:\n",
-    "    site = 'THU'\n",
-    "site"
+    "# path = 'P_bird_sketch_age5_IPAD5_THU5F3.png'\n",
+    "# path = 'P_airplane_sketch_age4_CDM_photodraw_e21547242197593.png'\n",
+    "# condition = path.split('/')[-1].split('_')[4]\n",
+    "# if path.find('CDM')!=-1:\n",
+    "#     site = 'CDM'\n",
+    "# else:\n",
+    "#     site = 'THU'\n",
+    "# site"
    ]
   },
   {
